--- a/SaitovSP/src/Documents/Ведомость/Forms/ФормаДокумента/Form.form
+++ b/SaitovSP/src/Documents/Ведомость/Forms/ФормаДокумента/Form.form
@@ -139,9 +139,6 @@
     <userVisible>
       <common>true</common>
     </userVisible>
-    <dataPath xsi:type="form:DataPath">
-      <segments>Объект.Ресторан</segments>
-    </dataPath>
     <extendedTooltip>
       <name>РесторанРасширеннаяПодсказка</name>
       <id>9</id>
@@ -167,19 +164,10 @@
       </userVisible>
       <autoFill>true</autoFill>
     </contextMenu>
-    <type>InputField</type>
     <editMode>EnterOnInput</editMode>
     <showInHeader>true</showInHeader>
     <headerHorizontalAlign>Left</headerHorizontalAlign>
     <showInFooter>true</showInFooter>
-    <extInfo xsi:type="form:InputFieldExtInfo">
-      <autoMaxWidth>true</autoMaxWidth>
-      <autoMaxHeight>true</autoMaxHeight>
-      <wrap>true</wrap>
-      <chooseType>true</chooseType>
-      <typeDomainEnabled>true</typeDomainEnabled>
-      <textEdit>true</textEdit>
-    </extInfo>
   </items>
   <items xsi:type="form:FormField">
     <name>Директор</name>
@@ -190,7 +178,7 @@
       <common>true</common>
     </userVisible>
     <dataPath xsi:type="form:DataPath">
-      <segments>Объект.Директор</segments>
+      <segments>Объект.Бухгалтер</segments>
     </dataPath>
     <extendedTooltip>
       <name>ДиректорРасширеннаяПодсказка</name>
@@ -218,6 +206,7 @@
       <autoFill>true</autoFill>
     </contextMenu>
     <type>InputField</type>
+    <readOnly>true</readOnly>
     <editMode>EnterOnInput</editMode>
     <showInHeader>true</showInHeader>
     <headerHorizontalAlign>Left</headerHorizontalAlign>
