--- a/SaitovSP/src/Documents/НачислениеЗарплаты/Forms/ФормаДокумента/Form.form
+++ b/SaitovSP/src/Documents/НачислениеЗарплаты/Forms/ФормаДокумента/Form.form
@@ -168,6 +168,7 @@
       <autoFill>true</autoFill>
     </contextMenu>
     <type>InputField</type>
+    <readOnly>true</readOnly>
     <editMode>EnterOnInput</editMode>
     <showInHeader>true</showInHeader>
     <headerHorizontalAlign>Left</headerHorizontalAlign>
@@ -190,7 +191,7 @@
       <common>true</common>
     </userVisible>
     <dataPath xsi:type="form:DataPath">
-      <segments>Объект.Директор</segments>
+      <segments>Объект.Ответственный</segments>
     </dataPath>
     <extendedTooltip>
       <name>ДиректорРасширеннаяПодсказка</name>
@@ -218,6 +219,7 @@
       <autoFill>true</autoFill>
     </contextMenu>
     <type>InputField</type>
+    <readOnly>true</readOnly>
     <editMode>EnterOnInput</editMode>
     <showInHeader>true</showInHeader>
     <headerHorizontalAlign>Left</headerHorizontalAlign>
