Мелкие баги 1-12 задачи

--- a/SaitovSP/src/InformationRegisters/ЦеныБлюд/Forms/ФормаЗаписи/Form.form
+++ b/SaitovSP/src/InformationRegisters/ЦеныБлюд/Forms/ФормаЗаписи/Form.form
@@ -110,7 +110,7 @@
       <common>true</common>
     </userVisible>
     <dataPath xsi:type="form:DataPath">
-      <segments>Запись.Автор</segments>
+      <segments>1/0:1b1dd0f6-a210-4fa4-8af9-0363ab39a301</segments>
     </dataPath>
     <extendedTooltip>
       <name>АвторРасширеннаяПодсказка</name>
@@ -137,20 +137,10 @@
       </userVisible>
       <autoFill>true</autoFill>
     </contextMenu>
-    <type>InputField</type>
     <editMode>Enter</editMode>
     <showInHeader>true</showInHeader>
     <headerHorizontalAlign>Left</headerHorizontalAlign>
     <showInFooter>true</showInFooter>
-    <extInfo xsi:type="form:InputFieldExtInfo">
-      <autoMaxWidth>true</autoMaxWidth>
-      <autoMaxHeight>true</autoMaxHeight>
-      <wrap>true</wrap>
-      <autoMarkIncomplete>true</autoMarkIncomplete>
-      <chooseType>true</chooseType>
-      <typeDomainEnabled>true</typeDomainEnabled>
-      <textEdit>true</textEdit>
-    </extInfo>
   </items>
   <items xsi:type="form:FormField">
     <name>Цена</name>
